syntax = "proto3";
package andromeda.internft.v1alpha1;

import "andromeda/internft/v1alpha1/types.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

// GenesisState defines the module's genesis state.
message GenesisState {
  // all the paramaters of the module
  Params params = 1 [(gogoproto.nullable) = false];

  // all the classes
  repeated GenesisClass classes = 2 [(gogoproto.nullable) = false];
}

// GenesisClass defines a class and its relevant data.
message GenesisClass {
  // the identifier of the class
  string id = 1;

  // the traits of the class
  repeated Trait traits = 2 [(gogoproto.nullable) = false];

  // all the NFTs of the class
  repeated GenesisNFT nfts = 3 [(gogoproto.nullable) = false];
}

// GenesisNFT defines an NFT and its relevant data.
message GenesisNFT {
  // the identifier of the NFT
  string id = 1;

  // the properties of the NFT
  repeated Property properties = 2 [(gogoproto.nullable) = false];

  // the owner of the NFT
  string owner = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}
